--- a/sources/Wotstat/Views/Shared/_LoginPartial.cshtml
+++ b/sources/Wotstat/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿
 <ul class="nav navbar-nav navbar-right">
     <li>
-        <a href="https://api.worldoftanks.ru/wot/auth/login/?application_id=171745d21f7f98fd8878771da1000a31&account_id=5806574&redirect_uri=@Url.Action("LogOn","Account")">Войти</a>
+        <a href="https://api.worldoftanks.ru/wot/auth/login/?application_id=171745d21f7f98fd8878771da1000a31&account_id=5806574&redirect_uri=http://localhost:57642/account/logon/">Войти</a>
     </li>
 </ul>
