--- a/sources/Wotstat/Views/Shared/_Layout.cshtml
+++ b/sources/Wotstat/Views/Shared/_Layout.cshtml
@@ -1,57 +1,62 @@
 ﻿@using Telerik.Web.Mvc.UI
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Wotstat</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-    @(Html.Telerik().StyleSheetRegistrar()
-                      .DefaultGroup(group => group
-                          .Add("telerik.examples.css")
-                          .Add("telerik.common.css")
-                          .Add("telerik.default.css")
-                          .Add("telerik.rtl.css")
-                          .Combined(true)
-                          .Compress(true))
-    )
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>@ViewBag.Title - Wotstat</title>
+        @Styles.Render("~/Content/css")
+        @Scripts.Render("~/bundles/modernizr")
+        @(Html.Telerik().StyleSheetRegistrar()
+              .DefaultGroup(group => group
+                  .Add("telerik.examples.css")
+                  .Add("telerik.common.css")
+                  .Add("telerik.default.css")
+                  .Add("telerik.rtl.css")
+                  .Combined(true)
+                  .Compress(true))
+              )
 
-</head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Wotstat", "Index", "Home", null, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Статистика", "Index", "Statistic")</li>
-                 </ul>
-                @Html.Partial("_LoginPartial")
+    </head>
+    <body>
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    @Html.ActionLink("Wotstat", "Index", "Home", null, new {@class = "navbar-brand"})
+                </div>
+           
+                <div class="navbar-collapse collapse">
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <ul class="nav navbar-nav">
+                            <li>@Html.ActionLink("Статистика", "Index", "Statistic")</li>
+                        </ul>
+                    }
+                    @Html.Partial("_LoginPartial")
+                </div>
+                
             </div>
         </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Wotstat</p>
-        </footer>
-    </div>
+        <div class="container body-content">
+            @RenderBody()
+            <hr />
+            <footer>
+                <p>&copy; @DateTime.Now.Year - Wotstat</p>
+            </footer>
+        </div>
     
-    @(Html.Telerik().ScriptRegistrar()
-                     .jQuery(false)
-                     .jQueryValidation(false)
-                     .DefaultGroup(group => group
-                     .Compress(true)))
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
-</body>
+        @(Html.Telerik().ScriptRegistrar()
+              .jQuery(false)
+              .jQueryValidation(false)
+              .DefaultGroup(group => group
+                  .Compress(true)))
+        @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/bootstrap")
+        @RenderSection("scripts", required: false)
+    </body>
 </html>
