--- a/sources/Wotstat/Views/Statistic/Index.cshtml
+++ b/sources/Wotstat/Views/Statistic/Index.cshtml
@@ -5,7 +5,7 @@
     var periods = ((IEnumerable<Period>)ViewBag.Periods).ToList();
 }          
 <h2>Статистика</h2>          
-<table>
+<table class="table-bordered table">
     <thead>
         <tr>
             <th></th>
@@ -18,56 +18,56 @@
     </thead>
     <tbody>
         @if (Model != null)
-    {
-        <tr>
-            <td>
-                Процент попаданий
-            </td>
-            <td>@Model.LastStatistic.HitsPercents.ToString("0.00")</td>
-            @Html.DynamicDataTableRow(Model.Dynamic, periods, x => x.HitsPercents.ToString("0.00"))
-        </tr>
-        <tr>
-            <td>
-                Уничтожено техники
-            </td>
-            <td>@Model.LastStatistic.Frags</td>
-            @Html.DynamicDataTableRow(Model.Dynamic, periods, x => x.Frags)
-        </tr>
-        <tr>
-            <td>
-                Средний опыт за бой
-            </td>
-            <td>@Model.LastStatistic.BattleAvgXp</td>
-            @Html.DynamicDataTableRow(Model.Dynamic, periods, x => x.BattleAvgXp)
-        </tr>
-        <tr>
-            <td>
-                Процент побед
-            </td>
-            <td>@Model.LastStatistic.WinsPercents.ToString("0.00")</td>
-            @Html.DynamicDataTableRow(Model.Dynamic, periods, x => x.WinsPercents.ToString("0.00"))
-        </tr>
-        <tr>
-            <td>
-                Проведено боёв
-            </td>
-            <td>@Model.LastStatistic.Battles</td>
-            @Html.DynamicDataTableRow(Model.Dynamic, periods, x => x.Battles)
-        </tr>
-        <tr>
-            <td>
-                Нанесено повреждений
-            </td>
-            <td>@Model.LastStatistic.DamageDealt</td>
-            @Html.DynamicDataTableRow(Model.Dynamic, periods, x => x.DamageDealt)
-        </tr>
-        <tr>
-            <td>
-                Максимальный опыт за бой
-            </td>
-            <td>@Model.LastStatistic.MaxXp</td>
-            @Html.DynamicDataTableRow(Model.Dynamic, periods, x => x.MaxXp)
-        </tr>
-    }
+        {
+            <tr>
+                <td>
+                    Процент попаданий
+                </td>
+                <td>@Model.LastStatistic.HitsPercents.ToString("0.00")</td>
+                @Html.DynamicDataTableRow(Model.Dynamic, periods, x => x.HitsPercents.ToString("0.00"))
+            </tr>
+            <tr>
+                <td>
+                    Уничтожено техники
+                </td>
+                <td>@Model.LastStatistic.Frags</td>
+                @Html.DynamicDataTableRow(Model.Dynamic, periods, x => x.Frags)
+            </tr>
+            <tr>
+                <td>
+                    Средний опыт за бой
+                </td>
+                <td>@Model.LastStatistic.BattleAvgXp</td>
+                @Html.DynamicDataTableRow(Model.Dynamic, periods, x => x.BattleAvgXp)
+            </tr>
+            <tr>
+                <td>
+                    Процент побед
+                </td>
+                <td>@Model.LastStatistic.WinsPercents.ToString("0.00")</td>
+                @Html.DynamicDataTableRow(Model.Dynamic, periods, x => x.WinsPercents.ToString("0.00"))
+            </tr>
+            <tr>
+                <td>
+                    Проведено боёв
+                </td>
+                <td>@Model.LastStatistic.Battles</td>
+                @Html.DynamicDataTableRow(Model.Dynamic, periods, x => x.Battles)
+            </tr>
+            <tr>
+                <td>
+                    Нанесено повреждений
+                </td>
+                <td>@Model.LastStatistic.DamageDealt</td>
+                @Html.DynamicDataTableRow(Model.Dynamic, periods, x => x.DamageDealt)
+            </tr>
+            <tr>
+                <td>
+                    Максимальный опыт за бой
+                </td>
+                <td>@Model.LastStatistic.MaxXp</td>
+                @Html.DynamicDataTableRow(Model.Dynamic, periods, x => x.MaxXp)
+            </tr>
+        }
     </tbody>
 </table>
