--- a/sources/Wotstat/Views/Shared/_Layout.cshtml
+++ b/sources/Wotstat/Views/Shared/_Layout.cshtml
@@ -50,13 +50,16 @@
             </footer>
         </div>
     
+      
+        @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/bootstrap")
         @(Html.Telerik().ScriptRegistrar()
-              .jQuery(false)
+              //.jQuery(false)
               .jQueryValidation(false)
               .DefaultGroup(group => group
                   .Compress(true)))
-        @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundles/bootstrap")
         @RenderSection("scripts", required: false)
+        
+
     </body>
 </html>
