--- a/sources/Wotstat/Views/Shared/_LoginPartial.cshtml
+++ b/sources/Wotstat/Views/Shared/_LoginPartial.cshtml
@@ -1,10 +1,14 @@
 ﻿@using Wotstat.Application.Boilerplate.Extensions.Web
 
+@{
+    var redirectUrl = Url.AbsoluteAction("Logon", "Account");
+    var authUrl = string.Format("{0}?application_id={1}&redirect_uri={2}", Html.Config().OAuthUrl, @Html.Config().ApplicationId, redirectUrl);
+}
 @if (Html.AccountName() == null)
 {
     <ul class="nav navbar-nav navbar-right">
         <li>
-            <a href="https://api.worldoftanks.ru/wot/auth/login/?application_id=171745d21f7f98fd8878771da1000a31&account_id=5806574&redirect_uri=http://localhost:57642/account/logon/">Войти</a>
+            <a href="@authUrl">Войти</a>
         </li>
     </ul>
 }
